[fix] avatarUrl
